<resources>
    <string name="app_name">知乎</string>

    <string name="action_settings">设置</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_search">搜索</string>
    <string name="action_notify">通知</string>
    <string name="default_user">詹嘉树</string>
    <string name="nav_change_theme">切换主题</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_shuffle">随机</string>
    <string name="title_activity_quiz">QuizActivity</string>
    <string name="action_publish">发布</string>
    <string name="action_add_photo">添加图片</string>
    
    <string name="general_login">登录</string>
    <string name="general_register">注册</string>
    <string name="general_null">""</string>
    <string name="general_confirm">确定</string>
    <string name="general_cancel">取消</string>
    <string name="general_loading">正在加载...</string>
    
    <string name="guide_tip_first">观而思——知乎漫游指南</string>
    <string name="guide_tip_second">思而动——知乎漫游指南</string>
    <string name="guide_tip_third">动而问——知乎漫游指南</string>
    <string name="guide_tip_fourth">问而答——知乎漫游指南</string>
    <string name="guide_tip_fifth">答而得——知乎漫游指南</string>
    <string name="guide_tip_sixth">与世界分享\n你的知识、经验和见解</string>
    <string name="action_logout">登出</string>
    <string name="general_email">邮箱</string>
    <string name="general_password">密码</string>

    <string name="toast_check_network">网络连接失败，请检查网络</string>
    <string name="toast_login_success">登录成功</string>
    <string name="toast_login_fail">登录失败</string>
    <string name="toast_login_error_default">邮箱或密码错误</string>
    <string name="toast_login_error_email">无效的邮箱格式</string>
    <string name="toast_login_error_pwd">密码长度错误</string>
    <string name="toast_login_error_captcha">请输入验证码</string>
    <string name="title_activity_answer">AnswerActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="btn_nohelp_off">没有帮助</string>
    <string name="btn_nohelp_on">撤销没有帮助</string>
    <string name="btn_thank_off">感谢</string>
    <string name="btn_thank_on">已感谢</string>
    <string name="btn_collect">收藏</string>
    <string name="btn_comment">评论</string>
    <string name="title_activity_article">ArticleActivity</string>
    <string name="title_activity_frame">FrameActivity</string>
    <string name="btn_follow">关注</string>
    <string name="btn_invited">邀请回答</string>
    <string name="btn_add_answer">添加回答</string>
    <string name="tbtn_cancel_follow">取消关注</string>
</resources>
