<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jiashu.zhihudemo.presenter.activity.MainActivity">

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:orderInCategory="80"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"/>

    <item android:id="@+id/action_notify"
        android:title="@string/action_notify"
        android:orderInCategory="90"
        android:icon="@drawable/ic_action_notifications_none"
        app:showAsAction="always"/>

    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
